# twiter-clon

./: .env.example  .gitignore  detalles-reto.txt  explore.html  index.html  notifications.html  package-lock.json  package.json  perfil.html  pnpm-lock.yaml  styles.css  tsconfig.json  vercel.json
backend/: .env.example  Cargo.toml  package.json  query.sql  server.js
backend/config/: db.js
backend/controllers/: authController.js
backend/middlewares/: authMiddleware.js
backend/models/: user.js
backend/routes/: authRoutes.js
backend/src/: main.rs  server.ts
backend/src/config/: cloudinary.rs  cloudinary.ts  constants.rs  mod.rs
backend/src/controllers/: tweetController.ts  userEditController.ts
backend/src/handlers/: auth_handler.rs  comment_handler.rs  index_handler.rs  like_handler.rs  mod.rs  profile_handler.rs  tweet_handler.rs  user_handler.rs
backend/src/helpers/: check_session.rs  cookies.rs  errors.rs  jwt.rs  mod.rs  success_response.rs
backend/src/middleware/: auth_middleware.rs
backend/src/middlewares/: authMiddleware.ts  checkAuth.ts
backend/src/models/: api_model.rs  auth_model.rs  cloudinary_model.rs  comment_model.rs  like_model.rs  mod.rs  tweet.ts  tweet_model.rs  user.ts  user_model.rs
backend/src/routes/: authRoutes.ts  editUserProfileRoutes.ts  imageRoutes.ts  index.rs  indexRoutes.ts  mod.rs  tweetsRoutes.ts
backend/src/services/: auth_services.rs  cloudinary_services.rs  comment_services.rs  like_services.rs  mod.rs  tweet_services.rs  user_services.rs
backend/src/views/: error.ejs  explore.ejs  index.ejs  perfil.ejs
(+207 files in other folders)
