[package]
name = "backend-rust"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.8.8", features = ["multipart"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
tokio = { version = "1", features = ["full"] }
chrono = { version = "0.4", features = ["serde"] }
validator = { version = "0.19", features = ["derive"] }
jsonwebtoken = { version = "10", features = ["rust_crypto"] }
bcrypt = "0.15"
once_cell = "1.19" # Para gestionar la SECRET_KEY globalmente
dotenv = "0.15"    # Para leer variables de entorno
dotenvy = "0.15.7"
utoipa = { version = "5.4.0", features = ["axum_extras"] }
utoipa-swagger-ui = { version = "9", features = ["axum"] }
sqlx = { version = "0.8.6", features = [
    "runtime-tokio-rustls",
    "postgres",
    "chrono",
    "uuid"
] }
tower-http = { version = "0.6.6", features = ["cors"] }
axum-extra = { version = "0.12.5", features = ["cookie"] }
time = "0.3"

reqwest = { version = "0.12", features = ["json", "multipart"] }

sha2 = "0.10.9"
base64 = "0.22"

uuid = { version = "1", features = ["v4"] }
